[TASK] Add mendatory extension key in composer.json
See: https://docs.typo3.org/m/typo3/reference-coreapi/master/en-us/ExtensionArchitecture/ComposerJson/Index.html#extra

--- a/composer.json
+++ b/composer.json
@@ -40,5 +40,10 @@
     "psr-4": {
       "Plan2net\\Sierrha\\": "Classes/"
     }
+  },
+  "extra": {
+    "typo3/cms": {
+      "extension-key": "sierrha"
+    }
   }
 }
