--- a/composer.json
+++ b/composer.json
@@ -34,8 +34,8 @@
   },
   "require": {
     "php": "^7.2 || ^8.1",
-    "typo3/cms-backend": "^9.5 || ^10.4 || ^11.5",
-    "typo3/cms-frontend": "^9.5 || ^10.4 || ^11.5"
+    "typo3/cms-backend": "^9.5 || ^10.4 || ^11.5 || ^12.4",
+    "typo3/cms-frontend": "^9.5 || ^10.4 || ^11.5 || ^12.4"
   },
   "require-dev": {
     "typo3/testing-framework": "^4.0 || ^6.0"
